--- a/nethserver-openvpn.spec.in
+++ b/nethserver-openvpn.spec.in
@@ -36,4 +36,9 @@ echo "%doc COPYING" >> %{name}-%{version}-filelist
 %defattr(-,root,root)
 
 %changelog
+* Wed Oct 23 2013 Davide Principi <davide.principi@nethesis.it> - 1.0.0-1.ns6
+- VPN: add support for OpenVPN net2net - Feature #1958 [NethServer]
+- VPN: support for OpenVPN roadwarrior - Feature #1956 [NethServer]
+- VPN - Feature #1763 [NethServer]
+
 
