--- a/nethserver-openvpn.spec.in
+++ b/nethserver-openvpn.spec.in
@@ -36,6 +36,10 @@ echo "%doc COPYING" >> %{name}-%{version}-filelist
 %defattr(-,root,root)
 
 %changelog
+* Wed Aug 20 2014 Davide Principi <davide.principi@nethesis.it> - 1.1.0-1.ns6
+- OpenVPN: firewall rules for tun/tap devices - Enhancement #2813 [NethServer]
+- IDS/IPS (snort) - Feature #1771 [NethServer]
+
 * Wed Feb 05 2014 Davide Principi <davide.principi@nethesis.it> - 1.0.2-1.ns6
 - OpenVPN Downloaded client configuration contains a bad directive - Bug #2624 [NethServer]
 - OpenVPN name resolution - Bug #2525 [NethServer]
