--- a/nethserver-openvpn.spec.in
+++ b/nethserver-openvpn.spec.in
@@ -36,6 +36,9 @@ echo "%doc COPYING" >> %{name}-%{version}-filelist
 %defattr(-,root,root)
 
 %changelog
+* Tue Dec 09 2014 Giacomo Sanchietti <giacomo.sanchietti@nethesis.it> - 1.1.2-1.ns6
+- DNS: remove role property from dns db key - Enhancement #2915 [NethServer]
+
 * Tue Nov 04 2014 Giacomo Sanchietti <giacomo.sanchietti@nethesis.it> - 1.1.1-1.ns6
 - Firewall fallback when IPS is not running - Enhancement #2935 [NethServer]
 
