--- a/.tx/config
+++ b/.tx/config
@@ -1,20 +1,32 @@
 [main]
 host = https://www.transifex.com
 
-[nethserver.Dashboard_VPN_OpenVPNClients]
-source_file = root/usr/share/nethesis/NethServer/Language/en/NethServer_Module_Dashboard_VPN_OpenVPNClients.php
-source_lang = en
-type = PHP_ALT_ARRAY
-
-
-[nethserver.Dashboard_VPN_OpenVPNServer]
-source_file = root/usr/share/nethesis/NethServer/Language/en/NethServer_Module_Dashboard_VPN_OpenVPNServer.php
-source_lang = en
-type = PHP_ALT_ARRAY
-
-
 [nethserver.VPN_OpenVPN]
 source_file = root/usr/share/nethesis/NethServer/Language/en/NethServer_Module_VPN_OpenVPN.php
+source_lang = en
+type = PHP_ALT_ARRAY
+
+
+[nethserver.VPN_Clients]
+source_file = root/usr/share/nethesis/NethServer/Language/en/NethServer_Module_VPN_Clients.php
+source_lang = en
+type = PHP_ALT_ARRAY
+
+
+[nethserver.VPN_Accounts]
+source_file = root/usr/share/nethesis/NethServer/Language/en/NethServer_Module_VPN_Accounts.php
+source_lang = en
+type = PHP_ALT_ARRAY
+
+
+[nethserver.OpenVPNStatus]
+source_file = root/usr/share/nethesis/NethServer/Language/en/NethServer_Module_OpenVPNStatus.php
+source_lang = en
+type = PHP_ALT_ARRAY
+
+
+[nethserver.VPN]
+source_file = root/usr/share/nethesis/NethServer/Language/en/NethServer_Module_VPN.php
 source_lang = en
 type = PHP_ALT_ARRAY
 
